# vibecoder-secure-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DATA_RECOVERY_ANALYSIS.md  Dockerfile  LICENSE  Makefile  README.md  SYSTEM_INVENTORY.md  VIB-018_RECOVERY_ROADMAP.md  VIBECODER-MANUAL.md  ai-plugin.json  deploy.sh  docker-compose.yml  goldminer.toml  main.py  production.yml  pyproject.toml  requirements.txt  test_comprehensive_suite.py
.github/workflows/: ci-cd.yml  validate-pr.yml
.goldminer/: config.yml  manifest.json  vibecoder_roadmap.json
.goldminer/automation/: automation_rules.json
.goldminer/context_compression/: compressed_chunks.json  compression_rules.json  focus_tracker.json
.goldminer/duplicate_detection/: duplicate_report.json
.goldminer/enhanced_context/: ai_decisions.json  compressed_context.json
.goldminer/file_placement/: placement_report.json
.goldminer/metrics/: health_metrics.json
docs/: API.md  README.md  SECURITY.md  dashboard.html  roadmap.html  test_report.html  test_results.html
docs/manual/: quick-reference.md
scripts/: test-deployment.py  test_comprehensive_suite.py
src/: __init__.py
src/agents/: __init__.py  audit.py  auto_heal.py  backup.py  compliance.py  context_compression.py  duplicate_detection.py  enhanced_context.py  file_placement.py  generate_docs.py  handover_updater.py  integrity.py  milestone_enforcer.py  monitoring.py  smart_automation.py  validate_docs.py  vibecoder_roadmap.py  visual_roadmap.py
